Update spacing module to fix mutations

--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -1203,7 +1203,6 @@ img { max-width: 100%; }
 .pvxxl { padding-top: 8rem; padding-bottom: 8rem; }
 .pvxxxl { padding-top: 16rem; padding-bottom: 16rem; }
 .phn { padding-left: 0; padding-right: 0; }
-.pvxs { padding-left: .25rem; padding-right: .25rem; }
 .phs { padding-left: .5rem; padding-right: .5rem; }
 .phm { padding-left: 1rem; padding-right: 1rem; }
 .phl { padding-left: 2rem; padding-right: 2rem; }
@@ -1588,7 +1587,6 @@ img { max-width: 100%; }
  .pvxxl-ns { padding-top: 8rem; padding-bottom: 8rem; }
  .pvxxxl-ns { padding-top: 16rem; padding-bottom: 16rem; }
  .phn-ns { padding-left: 0; padding-right: 0; }
- .pvxs-ns { padding-left: .25rem; padding-right: .25rem; }
  .phs-ns { padding-left: .5rem; padding-right: .5rem; }
  .phm-ns { padding-left: 1rem; padding-right: 1rem; }
  .phl-ns { padding-left: 2rem; padding-right: 2rem; }
@@ -1862,7 +1860,6 @@ img { max-width: 100%; }
  .pvxxl-m { padding-top: 8rem; padding-bottom: 8rem; }
  .pvxxxl-m { padding-top: 16rem; padding-bottom: 16rem; }
  .phn-m { padding-left: 0; padding-right: 0; }
- .pvxs-m { padding-left: .25rem; padding-right: .25rem; }
  .phs-m { padding-left: .5rem; padding-right: .5rem; }
  .phm-m { padding-left: 1rem; padding-right: 1rem; }
  .phl-m { padding-left: 2rem; padding-right: 2rem; }
